# src/model/dto/InstrutorDto.ts
@@ -4,9 +4,9 @@ export class InstrutorDto {
     especialidade: string;
 
     constructor(
-        nome: string,
-        email: string,
-        especialidade: string
+        nome?: string,
+        email?: string,
+        especialidade?: string
     ) {
         this.nome = nome || '';
         this.email = email || '';
